# poopoo

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/server/: Cargo.toml
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: builder.rs  main.rs
