[workspace]
resolver = "3"
members = ["crates/xtask", "crates/client", "crates/server"]

[workspace.package]
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/haruki7049/poopoo"
publish = false

[workspace.metadata.crane]
name = "poopoo"

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive", "string"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
